// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker date-time-picker-legend Gitt at DateTimePickerLegend skal rendres Når den bare har default verdier Så rendres den med rikitg id legend tekst 1`] = `
<legend>
  myLabel
</legend>
`;

exports[`DateTimePicker date-time-picker-legend Gitt at DateTimePickerLegend skal rendres Når den er required og har requiredLabel Så rendres den med rikitg legend (legend med requiredLabel og eksplisitt format) 1`] = `
<legend>
  myLabel
  <em>
     MyRequiredLabel
  </em>
</legend>
`;

exports[`DateTimePicker date-time-picker-legend Gitt at DateTimePickerLegend skal rendres Når den har helpButton Så rendres den med helpButton nederst i legenden 1`] = `
<legend>
  myLabel
  <span
    class="helpButton"
  >
    helpButton
  </span>
</legend>
`;

exports[`DateTimePicker date-time-picker-legend Gitt at DateTimePickerLegend skal rendres Når den har optionalLabel Så rendres den med rikitg legend (legend med optionalLabel og eksplisitt format) 1`] = `
<legend>
  myLabel
  <em>
     MyOptionalLabel
  </em>
</legend>
`;

exports[`DateTimePicker date-time-picker-legend Gitt at DateTimePickerLegend skal rendres Når den har subLabel Så rendres den med subLabel nederst i legenden 1`] = `
<legend>
  myLabel
  <span
    class="label__sublabel"
  >
    <span
      class="subLabel"
    >
      subLabel
    </span>
  </span>
</legend>
`;
